# telegram-bot-backup

./: .replit  auto_push.sh  autogrid_logs.json  ftrade_setup.json  main.py  pyproject.toml  replit  replit.md  requirements.txt
attached_assets/: Pasted--1-TradingView--1759915877578_1759915877578.txt  Pasted--2--1758719638460_1758719638462.txt
