[project]
name = "python-template"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
requires-python = ">=3.11"
dependencies = [
    "apscheduler>=3.11.0",
    "flask>=3.1.2",
    "google-genai>=1.38.0",
    "google-generativeai>=0.8.5",
    "matplotlib>=3.10.6",
    "numpy>=2.3.3",
    "pandas>=2.3.2",
    "pillow>=11.3.0",
    "pytelegrambotapi>=4.29.1",
    "requests>=2.32.5",
    "sift-stack-py>=0.9.1",
    "websockets>=15.0.1",
]
